[gd_scene load_steps=2 format=3 uid="uid://b4ysbblxxc1mb"]

[ext_resource type="Script" uid="uid://ccli1gtswpxca" path="res://Scripts/UI/damage_display.gd" id="1_c0vjf"]

[node name="DamageDisplay" type="Node2D"]
z_index = 5
script = ExtResource("1_c0vjf")

[node name="Label" type="RichTextLabel" parent="."]
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = 41.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
fit_content = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="FadeTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="DestroyTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="BeforeFadeTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="FadeTimer" to="." method="_on_fade_timer_timeout"]
[connection signal="timeout" from="DestroyTimer" to="." method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="BeforeFadeTimer" to="." method="_on_before_fade_timer_timeout"]
